@@ -14,7 +14,7 @@ class DECSCLTests(object):
   """VT Level 1 doesn't have any distinguishing features that are testable that
   aren't also in level 2."""
   @vtLevel(2)
-  @knownBug(terminal="xterm", reason="xterm always turns on 8-bit controls.", shouldTry=False)
+  @knownBug(terminal="notxterm", reason="xterm always turns on 8-bit controls.", shouldTry=False)
   @knownBug(terminal="iTerm2", reason="iTerm2 doesn't implement DECSCL")
   @knownBug(terminal="iTerm2", reason="iTerm2 doesn't implement DECRQM", shouldTry=False)
   def test_DECSCL_Level2DoesntSupportDECRQM(self):
@@ -34,14 +34,14 @@ class DECSCLTests(object):
       AssertTrue(True)
 
   @vtLevel(2)
-  @knownBug(terminal="xterm", reason="xterm always turns on 8-bit controls.", shouldTry=False)
+  @knownBug(terminal="notxterm", reason="xterm always turns on 8-bit controls.", shouldTry=False)
   def test_DSCSCL_Level2Supports7BitControls(self):
     esccmd.DECSCL(62, 1)
     esccmd.CUP(Point(2, 2))
     AssertEQ(GetCursorPosition(), Point(2, 2))
 
   @vtLevel(3)
-  @knownBug(terminal="xterm", reason="xterm always turns on 8-bit controls.", shouldTry=False)
+  @knownBug(terminal="notxterm", reason="xterm always turns on 8-bit controls.", shouldTry=False)
   @knownBug(terminal="iTerm2", reason="Not implemented", shouldTry=False)
   def test_DSCSCL_Level3_SupportsDECRQMDoesntSupportDECSLRM(self):
     # Set level 3 conformance
@@ -59,7 +59,7 @@ class DECSCLTests(object):
     AssertEQ(GetCursorPosition().x(), 8)
 
   @vtLevel(4)
-  @knownBug(terminal="xterm", reason="xterm always turns on 8-bit controls.", shouldTry=False)
+  @knownBug(terminal="notxterm", reason="xterm always turns on 8-bit controls.", shouldTry=False)
   @knownBug(terminal="iTerm2", reason="iTerm2 doesn't implement DECSCL")
   @knownBug(terminal="iTerm2", reason="iTerm2 doesn't implement DECNCSM", shouldTry=False)
   def test_DECSCL_Level4_SupportsDECSLRMDoesntSupportDECNCSM(self):
@@ -85,7 +85,7 @@ class DECSCLTests(object):
     AssertEQ(GetCursorPosition().x(), 6)
 
   @vtLevel(5)
-  @knownBug(terminal="xterm", reason="xterm always turns on 8-bit controls.", shouldTry=False)
+  @knownBug(terminal="notxterm", reason="xterm always turns on 8-bit controls.", shouldTry=False)
   @knownBug(terminal="iTerm2", reason="Not implemented", shouldTry=False)
   def test_DECSCL_Level5_SupportsDECNCSM(self):
     # Set level 5 conformance
